--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint": "oxlint --type-aware --type-check .",
     "lint:fix": "oxlint --type-aware --type-check --fix .",
     "postinstall": "wxt prepare",
-    "release": "pnpm zip",
+    "release": "changeset tag",
     "test": "vitest",
     "test:run": "vitest run",
     "version": "changeset version",
