--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build extension
         run: pnpm build
 
+      - name: Create zip archive
+        run: pnpm wxt zip
+
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
