fix: prevent duplicate tag creation in release workflow
Disable automatic GitHub release creation by changesets/action to prevent
duplicate tags (v{version} alongside pita@{version}).

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
           publish: pnpm run release
           commit: "chore: release"
           title: "chore: release"
+          createGithubReleases: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
