--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint": "oxlint --type-aware --type-check .",
     "lint:fix": "oxlint --type-aware --type-check --fix .",
     "postinstall": "wxt prepare",
-    "release": "changeset tag",
+    "release": "git tag pita@$(node -p \"require('./package.json').version\")",
     "test": "vitest",
     "test:run": "vitest run",
     "version": "changeset version",
