feat: migrate Chrome Web Store submission to API v2
- Add scripts/upload-chrome-v2.sh for API v2 uploads
- Update release workflow to use API v2 script
- Fixes draft version not updating issue with API v1.1

Requires CHROME_PUBLISHER_ID secret to be added.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,11 +68,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Submit to Chrome Web Store
+      - name: Submit to Chrome Web Store (API v2)
         if: steps.changesets.outputs.hasChangesets == 'false'
-        run: pnpm wxt submit --chrome-zip .output/*-chrome.zip
+        run: ./scripts/upload-chrome-v2.sh
         env:
           CHROME_EXTENSION_ID: ${{ secrets.CHROME_EXTENSION_ID }}
           CHROME_CLIENT_ID: ${{ secrets.CHROME_CLIENT_ID }}
           CHROME_CLIENT_SECRET: ${{ secrets.CHROME_CLIENT_SECRET }}
           CHROME_REFRESH_TOKEN: ${{ secrets.CHROME_REFRESH_TOKEN }}
+          CHROME_PUBLISHER_ID: ${{ secrets.CHROME_PUBLISHER_ID }}
